# market_data_backend_platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENT.md  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 28ed6f4d74d0_initial_schema_with_instruments_and_.py  a1b2c3d4e5f6_alter_volume_to_biginteger.py
docker/: Dockerfile
docker/grafana/dashboards/: market_data.json
docker/grafana/provisioning/dashboards/: dashboard.yml
docker/grafana/provisioning/datasources/: postgres.yml
docs/: DEV_PLAN.md  GRAFANA.md  PRD.md  QA_PROTOCOL.md  architecture.md  roadmap.md
scripts/: validate_against_prd.py  validate_schemas.py  verify_config.py
src/market_data_backend_platform/: __init__.py  main.py
src/market_data_backend_platform/api/: __init__.py  dependencies.py
src/market_data_backend_platform/api/routes/: __init__.py  auth.py  health.py  instruments.py  prices.py
src/market_data_backend_platform/auth/: dependencies.py  password.py  token.py
src/market_data_backend_platform/core/: __init__.py  config.py  exceptions.py  logging.py
src/market_data_backend_platform/db/: __init__.py  session.py
src/market_data_backend_platform/etl/: __init__.py
src/market_data_backend_platform/etl/clients/: __init__.py  yahoo.py
src/market_data_backend_platform/etl/services/: __init__.py  ingestion.py
src/market_data_backend_platform/etl/transformers/: __init__.py  yahoo_transformer.py
src/market_data_backend_platform/models/: __init__.py  base.py  instrument.py  market_price.py
src/market_data_backend_platform/repositories/: __init__.py  base.py  instrument.py  market_price.py
src/market_data_backend_platform/scheduler/: __init__.py
src/market_data_backend_platform/schemas/: __init__.py  instrument.py  market_price.py
tests/integration/: __init__.py  conftest.py  test_api_integration.py  test_database_integration.py  test_etl_integration.py
tests/unit/: test_config.py  test_exceptions.py  test_health.py  test_ingestion_service.py  test_instrument.py  test_instruments_api.py  test_logging.py  test_market_price.py  test_models.py  test_repositories.py  test_session.py  test_yahoo_client.py  test_yahoo_transformer.py
tests/unit/auth/: test_auth_routes.py  test_password.py  test_token.py
