[project]
name = "market_data_backend_platform"
version = "0.1.0"
description = "FastAPI backend platform for market data"
readme = "README.md"
requires-python = ">=3.14"
authors = [
  { name = "Marco Alice" }
]

[tool.mypy]
python_version = "3.14"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = true
strict_optional = true
exclude = ["tests/", "alembic/"]

[[tool.mypy.overrides]]
module = "market_data_backend_platform.*"
strict = true
disallow_any_generics = false

[[tool.mypy.overrides]]
module = "market_data_backend_platform.core.logging"
warn_return_any = false

# SQLAlchemy modules - session.query().first() and session.get() return Any
[[tool.mypy.overrides]]
module = [
    "market_data_backend_platform.repositories.*",
    "market_data_backend_platform.db.*",
]
warn_return_any = false

# FastAPI decorator modules - decorators are not fully typed
[[tool.mypy.overrides]]
module = "market_data_backend_platform.api.routes.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "market_data_backend_platform.main"
disallow_untyped_decorators = false


[tool.black]
line-length = 88
target-version = ["py314"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src/market_data_backend_platform",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=85",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
